[project]
name = "distributed-systems-debug-env"
version = "1.0.0"
description = "OpenEnv distributed systems debugging environment"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.0",
  "pydantic>=2.11.0",
  "openenv-core>=0.2.0",
  "openai>=1.30.0",
  "httpx>=0.27.0"
]

[project.scripts]
server = "server.app:main"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
exclude = ["mesh*", "tests*"]